--- a/w2-bio/index.html
+++ b/w2-bio/index.html
@@ -51,6 +51,15 @@
             <li>Reading</li>
             </ul>
             <img src="images/GameCube_controller.png" alt="GameCube controller" style= "width: 500px">
+        <div id="hobbies"><h2>HOBBIES</h2> <!--HOBBIES SECTION-->
+            <ul>
+            <li>Going out with friends</li>
+            <li>Watching movies</li>
+            <li>Playing video games</li>
+            <li>Cooking</li>
+            <li>Reading</li>
+            </ul>
+            <img src="images/GameCube_controller.png" alt="GameCube controller" style= "width: 500px">
             
         </div>
         <hr>
