--- a/w3-bio/schools.html
+++ b/w3-bio/schools.html
@@ -15,6 +15,7 @@
             <a href="index.html">HOME</a> 
             <a href="schools.html">SCHOOLS</a>
             <a href="hobbies.html">HOBBIES</a>
+        </div>
     </div> <!--Nav-->
     <div id= "content">
         <p><h2>SCHOOLING</h2> <!--SCHOOLS SECTION-->
