--- a/w3-bio/hobbies.html
+++ b/w3-bio/hobbies.html
@@ -15,6 +15,7 @@
             <a href="index.html">HOME</a> 
             <a href="schools.html">SCHOOLS</a>
             <a href="hobbies.html">HOBBIES</a>
+        </div>
     </div> <!--Nav-->
     <div id= "content">
         <p><div id="hobbies"><h2>HOBBIES</h2> <!--HOBBIES SECTION-->
