--- a/w3-bio/index.html
+++ b/w3-bio/index.html
@@ -9,6 +9,7 @@
 <body>
     <div id="header" class="bg">
         <h1>Stephen M Bio</h1>
+    </div>
     </div><!--Header-->
     <div id=container>
         <div id="nav">
@@ -25,7 +26,6 @@
               it, I hope to graduate here and go straight into the cyber security field.<br>I have 3 cats and 2 dogs at 
               home</p>
               <img src="images/fluffy.jpg" alt= "My Cat" style= "width: 300px">
-              <br></p>
     </div> <!--Content-->
     <div id="footer" class="bg">
         <a href="#header">BACK TO TOP</a>
