--- a/w3-bio/hobbies.html
+++ b/w3-bio/hobbies.html
@@ -10,7 +10,7 @@
     <div id="header" class="bg">
         <h1>Stephen M Bio</h1>
     </div><!--Header-->
-    <div id=container>
+    <div id="container">
         <div id="nav">
             <a href="index.html">HOME</a> 
             <a href="schools.html">SCHOOLS</a>
@@ -32,6 +32,5 @@
     <div id="footer" class="bg">
         <a href="#header">BACK TO TOP</a>
     </div>
-    </div><!--Container-->
 </body>
 </html>
