--- a/w3-bio/index.html
+++ b/w3-bio/index.html
@@ -9,13 +9,13 @@
 <body>
     <div id="header" class="bg">
         <h1>Stephen M Bio</h1>
-    </div>
     </div><!--Header-->
-    <div id=container>
+    <div id="container">
         <div id="nav">
             <a href="index.html">HOME</a> 
             <a href="schools.html">SCHOOLS</a>
             <a href="hobbies.html">HOBBIES</a>
+    </div>
     </div> <!--Nav-->
     <div id= "content">
         <p><div id="bio"><h2>BIO</h2> <!--BIO SECTION-->
