--- a/w3-bio/schools.html
+++ b/w3-bio/schools.html
@@ -10,7 +10,7 @@
     <div id="header" class="bg">
         <h1>Stephen M Bio</h1>
     </div><!--Header-->
-    <div id=container>
+    <div id="container">
         <div id="nav">
             <a href="index.html">HOME</a> 
             <a href="schools.html">SCHOOLS</a>
@@ -18,16 +18,15 @@
         </div>
     </div> <!--Nav-->
     <div id= "content">
-        <p><h2>SCHOOLING</h2> <!--SCHOOLS SECTION-->
+        <h2>SCHOOLING</h2> <!--SCHOOLS SECTION-->
             <ol><li>Prudence Crandall Elementry</li>
                  <li>North Street Elementry</li>
                  <li>Brennan Middle School</li>
-                 <li>Attleboro High School</li></p>
-                 <img src="images/ahs.jpg">
-    </div> <!--Content-->
-    <div id="footer" class="bg">
+                 <li>Attleboro High School</li> </ol>
+                 <img src="images/ahs.jpg" alt="Attleboro High School">
+     </div>
+                 <div id="footer" class="bg">
         <a href="#header">BACK TO TOP</a>
     </div>
-    </div><!--Container-->
 </body>
 </html>
