--- a/w3-bio/index.html
+++ b/w3-bio/index.html
@@ -29,6 +29,7 @@
     </div> <!--Content-->
     <div id="footer" class="bg">
         <a href="#header">BACK TO TOP</a>
+        <img src="images/w3bio.jpg" alt="Verification">
     </div>
     </div><!--Container-->
 </body>
