--- a/w3-bio/schools.html
+++ b/w3-bio/schools.html
@@ -25,8 +25,9 @@
                  <li>Attleboro High School</li> </ol>
                  <img src="images/ahs.jpg" alt="Attleboro High School">
      </div>
-                 <div id="footer" class="bg">
+                 <div id="footer" class="bg">     
         <a href="#header">BACK TO TOP</a>
+        <img src="images/w3bio.jpg" alt="Verification">
     </div>
 </body>
 </html>
