--- a/w3-bio/hobbies.html
+++ b/w3-bio/hobbies.html
@@ -31,6 +31,7 @@
     </div> <!--Content-->
     <div id="footer" class="bg">
         <a href="#header">BACK TO TOP</a>
+        <img src="images/w3bio.jpg" alt="Verification">
     </div>
 </body>
 </html>
